[gd_scene load_steps=4 format=2]

[ext_resource path="res://NetworkManager/NetworkManager.gd" type="Script" id=1]
[ext_resource path="res://NetworkManager/Phases/PlayerRegisterNetworkPhase.gd" type="Script" id=2]
[ext_resource path="res://NetworkManager/Connections.gd" type="Script" id=3]

[node name="NetworkManager" type="Node"]
script = ExtResource( 1 )

[node name="Connections" type="Node" parent="."]
script = ExtResource( 3 )

[node name="PlayerRegisterNetworkPhase" type="Node" parent="."]
script = ExtResource( 2 )
[connection signal="player_data_created" from="Connections" to="." method="_on_Connections_player_data_created"]
[connection signal="player_data_erased" from="Connections" to="." method="_on_Connections_player_data_erased"]
